# student-kramers-m4

./: .gitignore  M4_RESEARCH_WORKFLOW_EN.md  PYTHON_BEGINNER_GUIDE_EN.md  README.md  pyproject.toml
docs/: CODE_REFERENCE.md  FUNCTION_REFERENCE.md  M4_GREENLAND_RESEARCH_REPORT.md  M4_IMPLEMENTATION_NOTE_FOR_SUPERVISOR.md  M4_RESEARCH_UPDATE_FOR_PREDRAG.md
docs/results/: README.md  manifest.csv
greenland_application/: __init__.py  bootstrap_analysis.py  config.py  data_loading.py  figures.py  ios_analysis.py  pre_ios.py  reporting.py  run_analysis.py  run_application.py  run_bootstrap.py  run_bootstrap_analysis.py  run_figures.py  run_ios_analysis.py  run_modelwise_ios_analysis.py  run_modelwise_ios_bootstrap.py  run_pre_ios.py  run_report_assets.py  run_single.py
notebooks/: greenland_m4_analysis.ipynb  new project.ipynb
student_kramers/: __init__.py  bootstrap.py  bootstrap_analysis.py  config.py  data_loading.py  discrimination.py  estimation.py  figures.py  ios_analysis.py  likelihoods.py  models.py  pre_ios.py  recovery.py  run_analysis.py  run_application.py  run_bootstrap.py  run_bootstrap_analysis.py  run_discrimination.py  run_figures.py  run_ios_analysis.py  run_modelwise_ios_analysis.py  run_modelwise_ios_bootstrap.py  run_pre_ios.py  run_recovery.py  run_single.py  run_validation.py  simulation.py
tests/: test_bootstrap.py  test_discrimination.py  test_m4.py  test_models.py  test_pre_ios.py  test_recovery.py  test_regression.py  test_workflow.py
tests/fixtures/: m2_ios_sample.csv  model_fits.csv
tools/: build_greenland_notebook.py
(+63 files in other folders)
