[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "student-kramers-research"
version = "0.1.0"
description = "Research workflow for partially observed Student Kramers models"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "openpyxl>=3.1",
    "jupyterlab>=4.0",
]

[tool.setuptools.packages.find]
include = ["student_kramers*"]
